src/sage/libs/ntl/ntl.h

extern DL_IMPORT(PyObject) *(make_ZZ(struct ZZ (*)));
extern DL_IMPORT(PyObject) *(make_ZZ_p(struct ZZ_p (*)));
extern DL_IMPORT(PyObject) *(make_GF2X(struct GF2X (*)));
extern DL_IMPORT(PyObject) *(make_GF2E(struct GF2E (*)));
extern DL_IMPORT(PyObject) *(make_GF2EX(struct GF2EX (*)));
extern DL_IMPORT(void) initntl(void);